--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <H1>
-  Meghan Mack
+    Meghan Mack
   </H1>
+  <p>
+    I am currently a 10th grade student at towers high school i play vollyball for my local church and im learnig how to play basketball.
+    i enjoy being the groupleader at my church and im currently training to be a lymphatic massage theripist
+  </p>
+  <p>
+    My interest are my job where im training to be a lymphatic massage theripist, listing to music, wringing music, learning how to play the gitar
+    im also starting to get more into nature. I also enjoy fashion i love putting together a nice outfit. I love to hang out with my friends.
+    i go to the movies every two weeks jus to get out the house and i go to the mall atleast once a month for the same reason.
+  </p>
 </html>
