--- a/index.html
+++ b/index.html
@@ -13,3 +13,7 @@
     i go to the movies every two weeks jus to get out the house and i go to the mall atleast once a month for the same reason.
   </p>
 </html>
+
+<H1>Here's my new page</H1>
+<a href="html/newpage.html">Here it is!</a>
+<html>
