--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <H1 style="color:RebeccaPurple;">
+  <H1 style="color:#663399;">
     Meghan Mack
   </H1>
   <p>
