--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <H1 style="color:#663399;">
+ <head>
+    <link rel="stylesheet" href="css/mystyle.css">
+  </head>
     Meghan Mack
   </H1>
   <p>
