--- a/html/newpage.html
+++ b/html/newpage.html
@@ -1,3 +1,11 @@
-<H1> This is my new page</H1>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <link rel="stylesheet" href="css/mystyle.css">
+</head>
+  <H1> This is my new page</H1>
 
-<p>Here are some words</p>
+  
+  <p>Here are some words</p>
+</body>
+</html>
