--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
- <head>
+  <head>
     <link rel="stylesheet" href="css/mystyle.css">
   </head>
+  <body>
+  <H1>
     Meghan Mack
   </H1>
   <p>
