--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
   <div class="navbar">
     <li><a href="./">About</a></li>
-    <li><a href="html/publications">Publications</a></li>
-    <li><a href="html/research">Research</a></li>
+    <li><a href="html/publications">Intrest</a></li>
+    <li><a href="html/research">Sports</a></li>
   </div>
   <div class="main">
     <div class="clearfix">
