--- a/html/interest.html
+++ b/html/interest.html
@@ -12,5 +12,7 @@
   <div class="main">
     <h1>Interest</h1>
     <p>Int list</p>
+    <p>
+      my interest includ singing,writing,and fashion. 
       
 </html>
