--- a/html/interest.html
+++ b/html/interest.html
@@ -11,8 +11,6 @@
   <hr width=80%>
   <div class="main">
     <h1>Interest</h1>
-    <p>Int list</p>
-    <p>
-      my interest includ singing,writing,and fashion. 
-      
+    <p>My interest includ singing,writing,and drawing</p>
+   
 </html>
